# startup_wellness_analyze

./: .dockerignore  .env  .env.example  .firebaserc  .gitignore  @core_improvment.yaml  @deployment_analysis_2024_01_04.md  Dockerfile  FRONTEND_DOCUMENTATION_BACKUP.md  README.md  docker-compose.override.yml.bak  docker-compose.yml  docker_connection_issue_analysis.md  docker_newsolution.md  dockerproblem.md  entrypoint.sh  firebase.json  firestore.indexes.json  frontend-to-moving.md  health_impact_weights_data.sql  health_impact_weights_schema.sql  load_health_impact_weights.py  main.py  package.json  requirements.txt  setup_environment.sh  stractre.yaml  tatus  tech_blog_strategy.md  temp1.txt  temp2.txt  template_project_to_componets.yaml  test_imports.py  trable.md  vc_roi_analysis.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  alembic.ini  auth.py  backend_stractre.ymal  cloudbuild.yaml  config.py  create_test_db.py  database.py  entrypoint.sh  environment.yml  error_analysis.md  error_analysis_for_beginners.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_postgres_password.ps1  schemas.py  setup.py  setup_db.bat  setup_db.sql  setup_postgres.ps1  start.sh  stractre.yaml  test_db_connection.py  test_settings.py
backend/analysis/: AssociationAnalyzer.py  BayesianInferenceAnalyzer.py  CausalInferenceAnalyzer.py  CausalStructureAnalyzer.py  ClusterAnalyzer.py  FinancialAnalyzer.py  HealthInvestmentEffectIndexCalculator.py  KnowledgeTransferIndexCalculator.py  MarketAnalyzer.py  MonteCarloSimulator.py  PCAAnalyzer.py  PortfolioNetworkAnalyzer.py  PredictiveModelAnalyzer.py  SensitivityAnalyzer.py  StartupSurvivabilityAnalyzer.py  SurvivalAnalyzer.py  Team_Analyzer.py  TextMiner.py  TimeSeriesAnalyzer.py  VCROICalculator.py  __init__.py  association_analyzer.py  base.py  bayesian_analyzer.py  calculate_descriptive_stats.py  cluster_analyzer.py  correlation_analysis.py  imorovment.yaml  pca_analyzer.py  regression_analyzer.py  survival_analyzer.py  test_data_cleaning.py  text_miner.py  time_series_analyzer.py  utils.py
backend/api/: MIGRATION_GUIDE.md  __init__.py  apiimpovemrnt.yaml  coding_standards.md  dependencies.py  improvement_visual.yaml  logging_utils.py  main.py  middleware.py  models.py  startup.py  test_coverage_plan.md  visualization.py
backend/app/: entrypoint.sh  main.py  schemas.py
backend/config/: __init__.py  bayesian_settings.py  config.py  database_config.py  settings.py
backend/core/: PriorityAsyncQueue.py  README.md  __init__.py  anonymization.py  association_analyzer.py  async_utils.py  auth_manager.py  auth_metrics.py  cluster_analyzer.py  common_logger.py  compliance_manager.py  config.py  core_improvment.yaml  correlation_analyzer.py  custom_report_builder.py  dashboard_creator.py  data_input.py  data_preprocessor.py  data_quality_checker.py  descriptive_stats_calculator.py  di.py  di_config.py  exceptions.py  external_data_fetcher.py  feature_engineer.py  financial_analyzer.py  firebase_client.py  generative_ai_manager.py  google_forms_connector.py  google_forms_vas_collector.py  graph_generator.py  interactive_visualizer.py  logging_config.py  market_analyzer.py  model_evaluator.py  patterns.py  pca_analyzer.py  pdf_report_generator.py  performance_predictor.py  rate_limiter.py  (+12 more)
backend/credentials/: startupwellnessanalyze-445505-firebase-adminsdk-2hbn3-d355b6ce27.json
backend/database/: README.md  __init__.py  companies_sql.yaml  config.py  connection.py  crud.py  crud_sql.py  database.py  database_improvement.yaml  init.sql  make_sql.yaml  migration.py  migration_helper.py  models.py  models_sql.py  neo4j.py  postgres.py  repository.py
backend/di/: redis_module.py
backend/docs/: ai_data_integration_plan.md  analysis_requirements.md  bayesian_parameters_rationale.md  clean_architecture.md  dependency_injection.md  firestore_design_policy.md  migration_status.md  performance_monitoring.md  post_launch_enhancement_plan.md  startup_wellness_bussiness_plan.md  taisaku.md
backend/domain/: __init__.py
backend/federated_learning/: README.md  TDD.yaml  __init__.py  config.yaml  plan.md  project_state.yaml  pytest.ini  requirements.txt  task_4_3_plan.md  task_4_4_plan.md
backend/infrastructure/: __init__.py  di_config.py
backend/middleware/: auth_middleware.py  subscription_middleware.py
backend/models/: ai_analysis.py  api_settings.py  chat.py  company.py  financial.py  wellness.py
backend/routers/: analysis_router.py  auth_router.py  company_router.py  group_router.py  pricing_router.py  report_router.py  subscription_router.py  user_router.py  visualization_router.py
backend/routes/: api_settings.py  chat.py
backend/service/: __init__.py  tasks.py
backend/services/: api_settings_service.py  chat_service.py  company_service.py
backend/src/: __init__.py  main.py
backend/stractrefiles/: analyze.yaml  api.yaml  dataconnect.yaml  federated-learning.yaml  servies.yaml  underthebackend.ymal  utilsandutil.yaml
backend/templates/: report_template.html
backend/tests/: __init__.py  conftest.py  firestore_test.py  run_analysis_tests.py  run_core_tests.py  run_database_tests.py  test_tasks.py  (+3 more)
(+740 files in other folders)
